<?xml version="1.0"?>
<package format="3">
  <name>dji_m3508_single</name>
  <version>0.1.0</version>
  <description>Single DJI M3508 ros2_control hardware interface with mock/real switch.</description>
  <maintainer email="you@example.com">wy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros2_control plugin="${prefix}/dji_m3508_hardware.xml"/>
  </export>
</package>
